Archive2/c8/99f8e5a49a9bce/output
main.cpp:14:1: error: an initializer for a delegating constructor must appear alone
MyClass(a, b, NULL),
^~~~~~~~~~~~~~~~~~~
main.cpp:29:25: error: use of undeclared identifier 'DefaultInstance'
         pOtherClass = &DefaultInstance;
                        ^
2 errors generated.
